# tesseract-sys

./: Cargo.toml  README.md  build.rs
.github/workflows/: rust.yml
src/: lib.rs  public_types_bindings_mac.rs
