[package]
name = "tesseract-sys"
version = "0.5.2"
authors = ["Kevin Kwok <antimatter15@gmail.com>", "Chris Couzens <ccouzens@gmail.com>"]
description = "Rust Bindings for Tesseract OCR"
license = "MIT"
edition = '2018'
repository = "https://github.com/ccouzens/tesseract-sys"
keywords = ["OCR", "tesseract"]
categories = ["external-ffi-bindings", "multimedia::images"]
links = "tesseract"
build = "build.rs"

[dependencies]
leptonica-sys = "0.3.1"

[build-dependencies]
bindgen = "0.52"
[target.'cfg(windows)'.build-dependencies]
vcpkg = "0.2.8"
